<resources>
    <string name="app_name">clothes-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_account">Add Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_color">Edit Color</string>
    <string name="edit_size">Edit Size</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="create_new_account">Create new account</string>
    <string name="please_full_all_the_information_in_this_section">please full all the information in this section</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="accounts">Accounts</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="login">LOGIN</string>
    <string name="colors">Color:</string>
    <string name="extension_product">Extension product</string>
    <string name="color_name">Color name</string>
    <string name="gender">Gender:</string>
    <string name="tissue_name">tissue_name</string>
    <string name="made_of">made of</string>
    <string name="category">Category</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="create_new_product">Create new product</string>
    <string name="name">Name</string>
    <string name="price_dollar">Price (dollar)</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
</resources>