<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@mipmap/wave_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:src="@drawable/ic_mobile_person" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="70dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="WELCOME"
            android:textColor="#3A3B39"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/activity_login_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_edit_text"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:drawableTint="@color/grey_500"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey_500"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/activity_login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border_edit_text"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:drawableTint="@color/grey_500"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/grey_500"

            android:textSize="12sp" />


        <Button
            android:id="@+id/registration_button_login_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>