<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/fragment_add_and_edit_account_image_view_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circular_background"
                    android:backgroundTint="#FFC107"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/fragment_add_and_edit_account_text_view_appbar_title"

                    style="@style/TitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:text="@string/add_product" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/top_rounded_card"
                android:backgroundTint="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/fragment_add_and_edit_account_text_view_create_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_product"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_add_and_edit_account_text_view_create_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/please_full_all_the_information_in_this_section" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/fragment_add_and_edit_account_circular_image"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:src="@color/primary_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/my_account_image_button_add_photo"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/circular_background"
                        android:backgroundTint="@color/grey"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add"
                        app:layout_constraintBottom_toBottomOf="@id/fragment_add_and_edit_account_circular_image"
                        app:layout_constraintEnd_toEndOf="@id/fragment_add_and_edit_account_circular_image"

                        app:tint="@color/primary_color" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/fragment_add_and_edit_account_edit_text_username"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_edit_text"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/grey_500"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusForward="@id/fragment_add_and_edit_account_edit_text_email"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_500"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/fragment_add_and_edit_account_edit_text_mobile"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_edit_text"
                        android:drawableStart="@drawable/ic_mobile"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/grey_500"
                        android:hint="@string/price_dollar"
                        android:inputType="number"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/fragment_add_and_edit_account_edit_text_password"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_500"
                        android:textSize="12sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/fragment_add_and_edit_account_edit_text_password"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_edit_text"
                        android:drawableStart="@drawable/ic_key"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/grey_500"
                        android:hint="@string/code"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:nextFocusForward="@id/fragment_add_and_edit_account_edit_text_confirm_password"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_500"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/fragment_add_and_edit_account_edit_text_confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_edit_text"
                        android:drawableStart="@drawable/ic_key"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/grey_500"
                        android:hint="@string/description"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:nextFocusForward="@id/fragment_add_and_edit_account_edit_text_address"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_500"
                        android:textSize="12sp" />


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender" />

                        <RadioGroup
                            android:id="@+id/fragment_add_and_edit_account_radio_group_gender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fragment_add_and_edit_account_radio_button_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Male" />

                            <RadioButton
                                android:id="@+id/fragment_add_and_edit_account_radio_button_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Female" />

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Role" />

                        <RadioGroup
                            android:id="@+id/fragment_add_and_edit_account_radio_group_role"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/fragment_add_and_edit_account_radio_button_representative"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Representative" />

                            <RadioButton
                                android:id="@+id/fragment_add_and_edit_account_radio_button_customer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Customer" />

                        </RadioGroup>
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/fragment_add_and_edit_account_button_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>